packages/css/markprompt.css
/* ... */
:where(.MarkpromptPromptFeedback button) {
  cursor: pointer;
  display: flex;
  align-items: center;
  justify-content: center;
  padding: 0.375rem;
  border-radius: 0.375rem;
  animation-name: markprompt-slide-up;
  animation-duration: 1s;
  animation-fill-mode: backwards;
  transition-timing-function: ease-in-out;
  color: var(--markprompt-mutedForeground);
  background-color: transparent;
}

:where(.MarkpromptPromptFeedback[data-variant='icons'] button) {
  border: 0;
}

:where(.MarkpromptPromptFeedback[data-variant='text'] button) {
  border: 1px solid var(--markprompt-border);
}

:where(.MarkpromptPromptFeedback button[data-active='true']) {
  background-color: var(--markprompt-primary);
  color: var(--markprompt-primaryForeground);
  border-color: var(--markprompt-primaryForeground);
}

.MarkpromptPromptFeedback button[data-active='true']:hover {
  background-color: var(--markprompt-primary);
}

:where(.MarkpromptPromptFeedback button svg) {
  display: block;
}

.MarkpromptPromptFeedback button:hover {
  background-color: var(--markprompt-muted);
}

:where(.MarkpromptProgress) {
  position: absolute;
  top: -1px;
  left: 0;
  height: 3px;
  background-image: linear-gradient(
    to right,
    var(--markprompt-primaryHighlight),
    var(--markprompt-secondaryHighlight)
  );
  animation-name: markprompt-progress;
  animation-duration: 2s;
  animation-fill-mode: none;
  animation-iteration-count: infinite;
  transition-timing-function: cubic-bezier(0.14, 0, 0.16, 1);
  transition-property: opacity;
  transition-duration: 200ms;
  opacity: 0;
}

:where([data-loading-state='preload'] .MarkpromptProgress) {
  opacity: 1;
}

:where(.MarkpromptMessagePrompt .MarkpromptProgress) {
  bottom: -1px;
  top: unset;
}

:where(.MarkpromptReferences) {
  position: relative;
  padding-top: 1rem;
  padding-bottom: 0.5rem;
  background-color: var(--markprompt-muted);
  border-top: 1px solid var(--markprompt-border);
  font-size: 0.875rem;
  color: var(--markprompt-mutedForeground);
  overflow: hidden;
  flex: 0 0 auto;
  transition-property: opacity, transform;
  transition-duration: 200ms;
  transition-timing-function: cubic-bezier(0.075, 0.82, 0.165, 1);
}

:where(.MarkpromptReferences[data-loading-state='cancelled']) {
  display: none;
}

:where(.MarkpromptChatView .MarkpromptReferences) {
  background-color: unset;
  border-top: none;
  padding-block: 0 1.5rem;
}

:where(.MarkpromptPromptView .MarkpromptReferences p) {
  padding-inline: 2rem;
  margin-top: 0;
}

:where(.MarkpromptReferences[data-loading-state='preload']) {
  overflow-x: hidden;
}

:where(.MarkpromptChatView .MarkpromptReferences p) {
  animation: markprompt-fade-in 500ms ease-out forwards 1;
  font-weight: 600;
  margin: 0;
  margin-bottom: 0.5rem;
  padding-inline: 2rem;
}

.MarkpromptChatView .MarkpromptReferences p {
  padding-inline: 1.5rem;
}

:where(.MarkpromptReferences ul) {
  --transparent: rgb(255 255 255 / 0%);
  --shadow-size: 0.5rem;
  --shadow-color: var(--markprompt-border);

  display: flex;
  flex-flow: row nowrap;
  align-items: center;
  gap: 0.5rem;
  margin-top: -0.25rem;
  list-style-type: none;
  margin-bottom: 0;
  overflow-x: scroll;
  scrollbar-width: none;
  -ms-overflow-style: none;
}

:where(.MarkpromptPromptView .MarkpromptReferences ul) {
  padding: 0.25rem 2rem 0.5rem;
  background-color: var(--markprompt-muted);
}

:where(.MarkpromptChatView .MarkpromptReferences ul) {
  background-color: unset;
  padding: 0.25rem 1.5rem 0.5rem;
}

.MarkpromptReferences ul::-webkit-scrollbar {
  display: none;
}

.MarkpromptReferences::before,
.MarkpromptReferences::after {
  content: '';
  position: absolute;
  top: 3px;
  bottom: 0;
  width: 1rem;
  pointer-events: none;
}

.MarkpromptReferences::before {
  z-index: 10;
  left: 0;
  background-image: linear-gradient(
    to right,
    var(--markprompt-muted),
    transparent
  );
}

.MarkpromptReferences::after {
  z-index: 10;
  right: 0;
  background-image: linear-gradient(
    to left,
    var(--markprompt-muted),
    transparent
  );
}

:where(.MarkpromptReference) {
  font-size: 0.875rem;
  line-height: 1.5rem;
  animation-name: markprompt-slide-up;
  animation-duration: 1s;
  animation-fill-mode: both;
  transition-timing-function: ease-in-out;
}

:where(.MarkpromptReference a) {
  display: inline-block;
  text-decoration: none;
  padding: 0.125rem 0.5rem;
  border: 1px solid var(--markprompt-border);
  border-radius: 0.375rem;
  color: var(--markprompt-primary);
  font-weight: 500;
  transition-property: opacity;
  transition-duration: 200ms;
  white-space: nowrap;
}

:where(.MarkpromptReference a:hover) {
  opacity: 0.8;
}

:where(.MarkpromptCancelled) {
  padding-inline: 1.5rem;
}

:where(.MarkpromptCancelledText) {
  font-size: var(--markprompt-text-size-xs);
  color: var(--markprompt-mutedForeground);
}

:where(.MarkpromptBackButton) {
  font-size: var(--markprompt-text-size);
  background-color: var(--markprompt-muted);
  color: var(--markprompt-primary);
  border-bottom: 1px solid var(--markprompt-border);
  display: flex;
  flex: none;
  align-items: center;
  font-weight: 500;
  padding: 0.5rem 1rem;
  gap: 0.25rem;
  cursor: pointer;
  border-top: none;
  border-left: none;
  border-right: none;
  width: 100%;
  outline: none;
}

:where(.MarkpromptBackButton span:first-child) {
  display: flex;
  align-items: center;
}

:where(.MarkpromptBackButton span:last-child) {
  display: flex;
  align-items: center;
  font-weight: 500;
}

:where(.MarkpromptSearchResultsContainer) {
  padding: 0 0.5rem;
  overflow-y: auto;
  display: flex;
  flex-direction: column;
}

:where(.MarkpromptSearchAnswerButton) {
  box-sizing: border-box;
  border-radius: 0.5rem;
  padding: 0.5rem 1rem;
  background-color: var(--markprompt-muted);
  color: var(--markprompt-foreground);
  font-size: var(--markprompt-text-size);
  display: flex;
  align-items: center;
  gap: 1rem;
  cursor: pointer;
  width: 100%;
  border: none;
  outline: none;
}
/* ... */

